# SOII_TP1

./: .gitignore  CMakeLists.txt  README.md
Client/src/: Client.c  Client.h
Server/database/: dat
Server/src/AuthService/: authService.c  authService.h  databaseInit.c
Server/src/AuthService/src/: authService.c  authService.h
Server/src/FileService/: fileService.c  fileService.h
Server/src/FileService/src/: fileService.c  fileService.h
Server/src/PrimaryServer/: server.c  server.h
Server/src/PrimaryServer/src/: server.c  server.h
lib/: MBR.h
lib/Auth_DB/: Auth_DB.c  Auth_DB.h  CMakeLists.txt
lib/Directory/: CMakeLists.txt  Makefile  cmake_install.cmake  dir.c  dir.h
lib/File_DB/: CMakeLists.txt  File_DB.c  File_DB.h
lib/Hash/: CMakeLists.txt  Makefile  cmake_install.cmake  hash.c  hash.h
lib/MBR/: CMakeLists.txt  MBR.c  MBR.h
lib/MD5/: CMakeLists.txt  MD5.c  MD5.h  Makefile  cmake_install.cmake
lib/MessageQueue/: CMakeLists.txt  Makefile  cmake_install.cmake  messageQueue.c  messageQueue.h
lib/Util/: CMakeLists.txt  Makefile  cmake_install.cmake  util.c  util.h
